generalized filepaths for portability

--- a/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
+++ b/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
@@ -57,10 +57,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = SNPnexus.load_data('/home/attila/projects/bsm/results/2020-09-07-annotations/annotated-calls.p')\n",
+    "data = SNPnexus.load_data('../../results/2020-09-07-annotations/annotated-calls.p')\n",
     "sczgwasloci = genome.read_scz_gwas()\n",
     "data = genome.annotate_with_gwas_loci(data, gwas=sczgwasloci, modify_return_data=True)\n",
-    "clozukpath = '/home/attila/projects/bsm/resources/CLOZUK/supp-table-4.csv'\n",
+    "clozukpath = '../../resources/CLOZUK/supp-table-4.csv'\n",
     "gwasgenes = operations.get_geneset(df=pd.read_csv(clozukpath, skiprows=7), col='Gene(s) tagged')"
    ]
   },
@@ -86,9 +86,9 @@
     }
    ],
    "source": [
-    "fpath = '/home/attila/projects/bsm/notebook/2021-03-09-gwas-genes/selected-gwas.csv'\n",
+    "fpath = '../2021-03-09-gwas-genes/selected-gwas.csv'\n",
     "selgwas = pd.read_csv(fpath, index_col='Trait', sep='\\t')\n",
-    "fpath = '/home/attila/projects/bsm/resources/GWAS/gwas_catalog_v1.0.2-associations_e100_r2021-02-25.tsv'\n",
+    "fpath = '../../resources/GWAS/gwas_catalog_v1.0.2-associations_e100_r2021-02-25.tsv'\n",
     "gwas = pd.read_csv(fpath, sep='\\t')\n",
     "gwas = gwas.loc[gwas['PUBMEDID'].isin(selgwas['PMID']), :]\n",
     "\n",
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fpath = '/home/attila/projects/bsm/resources/rare-variants/41586_2014_BFnature12975_MOESM71_ESM.csv'\n",
+    "fpath = '../../resources/rare-variants/41586_2014_BFnature12975_MOESM71_ESM.csv'\n",
     "func_scz_genesets = pd.read_csv(fpath, sep='\\t', index_col='Gene symbol').dropna().astype(pd.CategoricalDtype())\n",
     "func_scz_genesets = func_scz_genesets.apply(lambda s: s.cat.rename_categories({'.': False, 'Y': True}), axis=1)\n",
     "func_scz_genesets['composite'] = True\n",
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsvpath = '/home/attila/projects/bsm/results/2021-02-24-gnomad-constraint/gnomad.v2.1.1.lof_metrics.by_gene.txt'\n",
+    "tsvpath = '../../results/2021-02-24-gnomad-constraint/gnomad.v2.1.1.lof_metrics.by_gene.txt'\n",
     "constr = pd.read_csv(tsvpath, delimiter='\\t', index_col=0)\n",
     "constr['oe_lof < 0.35'] = constr.oe_lof < 0.35\n",
     "genes_oe_lof = set(constr.index[constr['oe_lof < 0.35']])"
@@ -6326,13 +6326,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 53057,\n",
-      "  \"iopub_port\": 43467,\n",
-      "  \"stdin_port\": 41823,\n",
-      "  \"control_port\": 34691,\n",
-      "  \"hb_port\": 50131,\n",
+      "  \"shell_port\": 52555,\n",
+      "  \"iopub_port\": 34777,\n",
+      "  \"stdin_port\": 51681,\n",
+      "  \"control_port\": 39513,\n",
+      "  \"hb_port\": 40965,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"07818d43-e0156a3628032758a489ea9f\",\n",
+      "  \"key\": \"e7df051d-1c9ce47f21bcf2df50b1ce6e\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -6341,7 +6341,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-340a06c9-85c6-416d-be40-f04645f4a15d.json\n",
+      "    $> jupyter <app> --existing kernel-640bc538-d35b-497b-912e-866899878223.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
